--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /009.データベース/Jdbc/dist/
 /011.巨大なソースコードの修正/JavaUserManagementSystem_ver1.0/JavaUserManagementSystem_ver1.0/build/
+/011.巨大なソースコードの修正/JavaUserManagementSystem_ver1.0/JavaUserManagementSystem_ver1.0/dist/
