--- a/011.巨大なソースコードの修正/JavaUserManagementSystem_ver1.0/JavaUserManagementSystem_ver1.0/nbproject/private/private.properties
+++ b/011.巨大なソースコードの修正/JavaUserManagementSystem_ver1.0/JavaUserManagementSystem_ver1.0/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\hayashi-s\\AppData\\Roaming\\NetBeans\\8.1\\tomcat70.properties
-j2ee.server.home=Z:/hayashi-s/96_xammp/tomcat
-j2ee.server.instance=tomcat70:home=Z:\\hayashi-s\\96_xammp\\tomcat
+deploy.ant.properties.file=C:\\Users\\suzuki\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
+j2ee.server.home=C:/xampp/tomcat
+j2ee.server.instance=tomcat70:home=C:\\xampp\\tomcat
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\hayashi-s\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+selected.browser=Chrome
+user.properties.file=C:\\Users\\suzuki\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
